<resources>
    <string name="app_name">Calculator</string>
    <string name="number1">Number 1</string>
    <string name="number2">Number 2</string>
    <string name="multiplySign">*</string>
    <string name="subtractSign">-</string>
    <string name="addSign">+</string>
    <string name="divideSign">/</string>
    <string name="result">Result</string>
    <string name="count_pi">Count PI</string>
</resources>
